k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: karpathy-wiki-service
spec:
  selector:
    app: karpathy-wiki
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
